@@ -6,7 +6,7 @@ language: python
 matrix:
     include:
         - os: linux
-          env: PY=3.7
+          env: PY=3.7.3
         - os: osx
           language: generic
           env: PY=3.7
